--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -35,6 +35,7 @@
 @string{MWR={Mon. Weather Rev.}}
 @string{MZ={Meteorol. Z.}}
 @string{NC={Nat. Commun.}}
+@string{NF={Nat. Food}}
 @string{NCC={Nat. Clim. Change}}
 @string{NH={Nat. Hazards}}
 @string{NHESS={Nat. Hazards Earth Sys.}}
@@ -843,6 +844,32 @@
   issn    = {1561-8633},
   doi     = {10.5194/nhess-7-327-2007},
   year    = 2007
+}
+
+@article{Jagermeyr_NF_2021,
+   author = {J\"agermeyr, Jonas and M\"uller, Christoph and Ruane, Alex C. and Elliott, Joshua and Balkovic, Juraj and Castillo, Oscar and Faye, Babacar and Foster, Ian and Folberth, Christian and Franke, James A. and Fuchs, Kathrin and Guarin, Jose R. and Heinke, Jens and Hoogenboom, Gerrit and Iizumi, Toshichika and Jain, Atul K. and Kelly, David and Khabarov, Nikolay and Lange, Stefan and Lin, Tzu-Shun and Liu, Wenfeng and Mialyk, Oleksandr and Minoli, Sara and Moyer, Elisabeth J. and Okada, Masashi and Phillips, Meridel and Porter, Cheryl and Rabin, Sam S. and Scheer, Clemens and Schneider, Julia M. and Schyns, Joep F. and Skalsky, Rastislav and Smerald, Andrew and Stella, Tommaso and Stephens, Haynes and Webber, Heidi and Zabel, Florian and Rosenzweig, Cynthia},
+   title = {Climate impacts on global agriculture emerge earlier in new generation of climate and crop models},
+   journal = NF,
+   volume = {2},
+   number = {11},
+   pages = {873-885},
+   ISSN = {2662-1355},
+   DOI = {10.1038/s43016-021-00400-y},
+   year = {2021},
+}
+
+@incollection{IPCC_2022_WGII_Ch_5,
+    address = {Cambridge, UK and New York, NY, USA},
+    author = {Bezner Kerr, R. and Hasegawa, T. and Lasco, R. and Bhatt, I. and Deryng, D. and Farrell, A. and Gurney-Smith, H. and Ju, H. and Lluch-Cota, S. and Meza, F. and Nelson, G. and Neufeldt, H. and, . and Thornton, P.},
+    booktitle = {Climate Change 2022: Impacts, Adaptation and Vulnerability. Contribution of Working Group II to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
+    chapter = {5},
+    doi = {10.1017/9781009325844.007},
+    editor = {Pörtner, H. O. and Roberts, D. C. and Tignor, M. and Poloczanska, E. S. and Mintenbeck, K. and Alegría, A. and Craig, M. and Langsdorf, S. and Löschke, S. and Möller, V. and Okem, A. and Rama, B.},
+    publisher = {Cambridge University Press},
+    title = {Food, Fibre, and Other Ecosystem Products},
+    type = {Book Section},
+    url = {https://www.ipcc.ch/report/ar6/wg2/downloads/report/IPCC_AR6_WGII_Chapter05.pdf},
+    year = {2022}
 }
 
 @incollection{IPCC_2021_WGI_Ch_11,
